--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^3.4.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vuex": "^3.6.2"
